- [Feature] Login using connection profile for AWS S3/STS + Google (OIDC) (S3)
- [Feature] Login using connection profile for AWS S3/STS + Azure AD (OIDC) (S3)
- [Feature] Support login using OAuth 2.0 in (ownCloud) (#14876)
- [Feature] Allow to create internal share (ownCloud, Nextcloud) (#14197)
- [Feature] Option to automatically download and install updates (macOS)
- [Bugfix] Refresh temporary access credentials obtained from CLI configuration (S3) (#10917)

8.6.3
- [Bugfix] Failure configuring credentials from AWS CLI setup (S3) (#14970)
- [Bugfix] Frequent broken pipe errors (FTP) (#14969)

8.6.2
- [Feature] Allow to open connections without copying authentication code after login (Microsoft OneDrive, Sharepoint)
- [Bugfix] Segmented downloads with multiple connections per file causes transfers to fail (#13374)
- [Bugfix] Use recommended part size from authorization response for large file uploads (Backblaze B2) (#14856)
- [Bugfix] Skip determining if directory only contains hidden files (Backblaze B2) (#14775)
- [Bugfix] Does not show folders by default that do not contain a .bzEmpty placeolder file (Backblaze B2) (#14768)
- [Bugfix] Make settings in Preferences → Connection → Timeouts apply for transfers (#14737)
- [Bugfix] Copy or move files between containers (Azure) (#14826)
- [Bugfix] Upload with glob pattern including folders for local source has wrong target on server (CLI) (#14800)
- [Bugfix] Should not attempt to read metadata of existing files with no --preserve flag passed (CLI) (#14802)
- [Bugfix] Resolve tilde prefix in default path to home directory (SFTP)

8.6.1
- [Bugfix] Parse seconds or milliseconds from Mtime in metadata (S3)

8.6.0
- [Feature] Add preference "Use Keychain" when unlocking vaults (Cryptomator) (#14662)
- [Bugfix] Slow listing of directory contents (Backblaze B2) (#14527)
- [Bugfix] Set newly calculated nonces and checksum when retrying upload (Cryptomator) (#14547)