@@ -99,9 +99,15 @@
     </li>
     <li><span class="label label-success">Feature</span> Option to automatically download and install updates (macOS)
     </li>
+    <li><span class="label label-success">Feature</span> Set creation date for uploaded files (Backblaze B2, Box, Google
+        Drive)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Refresh temporary access credentials obtained from CLI
         configuration (S3) (<a
                 target="_blank" href="https://trac.cyberduck.io/ticket/10917">#10917</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Cannot reuse nonce for GCM encryption uploading small files
+        (Cryptomator)
     </li>
 </ul>
 
